--- a/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalSettingsEditor/Resources/en-US/Resources.resw
@@ -553,7 +553,7 @@
     <comment>Header for a control to toggle if the app will always be presented on top of other windows, or is treated normally (when disabled).</comment>
   </data>
   <data name="Profile_ForceVTInput.Header" xml:space="preserve">
-    <value>Force the terminal to use the legacy input encoding</value>
+    <value>Use the legacy input encoding</value>
     <comment>Header for a control to toggle legacy input encoding for the terminal.</comment>
   </data>
   <data name="Profile_AllowVtChecksumReport.Header" xml:space="preserve">
@@ -565,11 +565,11 @@
     <comment>Header for a control to toggle support for Windows Terminal to run in the background.</comment>
   </data>
   <data name="Globals_IsolatedMode.Header" xml:space="preserve">
-    <value>Force each window to be its own process</value>
+    <value>Force each window to run in its own process</value>
     <comment>Header for a control to toggle making each window be its own process.</comment>
   </data>
   <data name="Globals_DebugFeaturesEnabled.Header" xml:space="preserve">
-    <value>Debug Mode</value>
+    <value>Enable debugging features</value>
     <comment>Header for a control to toggle debug features.</comment>
   </data>
   <data name="Globals_AlwaysOnTop.HelpText" xml:space="preserve">
@@ -577,20 +577,16 @@
     <comment>A description for what the "always on top" setting does. Presented near "Globals_AlwaysOnTop.Header".</comment>
   </data>
   <data name="Profile_ForceVTInput.HelpText" xml:space="preserve">
-    <value>Certain keys in some applications may stop working when enabling this setting.</value>
+    <value>Certain keyboard input in some applications may stop working properly when this setting is enabled.</value>
     <comment>Additional description for what the "force vt input" setting does. Presented near "Globals_ForceVTInput.Header".</comment>
   </data>
   <data name="Globals_AllowHeadless.HelpText" xml:space="preserve">
-    <value>This allows Global Summon and Quake Mode actions to work even when no windows are open.</value>
+    <value>This allows actions such as Global Summon and Quake Mode actions to work even when no windows are open.</value>
     <comment>Additional description for what the "allow headless" setting does. Presented near "Globals_AllowHeadless.Header".</comment>
   </data>
   <data name="Globals_IsolatedMode.HelpText" xml:space="preserve">
-    <value>Certain features including but not limited to global hotkeys, tab drag and drop, and running commandlines in existing windows won't work.</value>
-    <comment>Additional description for what the "isolated mode" setting does. Presented near "Globals_IsolatedMode.Header".</comment>
-  </data>
-  <data name="Globals_DebugFeaturesEnabled.HelpText" xml:space="preserve">
-    <value>Enables features to help debug Windows Terminal</value>
-    <comment>Additional description for what the "debug features enabled" setting does. Presented near "Globals_DebugFeaturesEnabled.Header".</comment>
+    <value>Certain features will not work properly, including—but not limited to—global hotkeys, tab drag and drop, and wt.exe window targeting.</value>
+    <comment>{Locked="wt.exe"} Additional description for what the "isolated mode" setting does. Presented near "Globals_IsolatedMode.Header".</comment>
   </data>
   <data name="Globals_TabWidthMode.Header" xml:space="preserve">
     <value>Tab width mode</value>
@@ -701,7 +697,7 @@
     <comment>Header for a sub-page of profile settings focused on more advanced scenarios.</comment>
   </data>
   <data name="Profile_Terminal.Header" xml:space="preserve">
-    <value>Terminal</value>
+    <value>Terminal Emulation</value>
     <comment>Header for a sub-page of profile settings focused on customizing the capabilities of the terminal.</comment>
   </data>
   <data name="Profile_AltGrAliasing.Header" xml:space="preserve">
@@ -1916,5 +1912,9 @@
   <data name="Profile_AnswerbackMessage.HelpText" xml:space="preserve">
     <value>The response that is sent when an ENQ control sequence is received.</value>
     <comment>{Locked=ENQ} A description for what the "ENQ response" setting does. Presented near "Profile_AnswerbackMessage".</comment>
+  </data>
+  <data name="Globals_DebugFeaturesEnabled.HelpText" xml:space="preserve">
+    <value>Useful for troubleshooting or developing Terminal.</value>
+    <comment>Additional description for what the "debug features enabled" setting does. Presented near "Globals_DebugFeaturesEnabled.Header".</comment>
   </data>
 </root>
