disable instead of hide

--- a/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
+++ b/src/cascadia/TerminalApp/Resources/en-US/Resources.resw
@@ -760,6 +760,9 @@
   <data name="AIChatMenuItem" xml:space="preserve">
     <value>Terminal Chat</value>
   </data>
+  <data name="AIChatMenuItemDisabled" xml:space="preserve">
+    <value>Terminal Chat (disabled by your admin)</value>
+  </data>
   <data name="NotificationIconFocusTerminal" xml:space="preserve">
     <value>Focus Terminal</value>
     <comment>This is displayed as a label for the context menu item that focuses the terminal.</comment>
