--- a/src/cascadia/QueryExtension/Resources/en-US/Resources.resw
+++ b/src/cascadia/QueryExtension/Resources/en-US/Resources.resw
@@ -126,7 +126,7 @@
     <comment>The message presented to the user when they attempt to use the AI chat feature without providing an AI endpoint and key.</comment>
   </data>
   <data name="UnknownErrorMessage" xml:space="preserve">
-    <value>An error occurred. Your Azure OpenAI Key might not be valid or the service might be temporarily unavailable.</value>
+    <value>An error occurred. Your AI provider might not be correctly configured, or the service might be temporarily unavailable.</value>
     <comment>The error message presented to the user when we were unable to query the provided endpoint.</comment>
   </data>
   <data name="InvalidModelMessage" xml:space="preserve">
@@ -176,5 +176,17 @@
   <data name="AssistantString" xml:space="preserve">
     <value>Assistant</value>
     <comment>A string to represent the section that the chat assistant typed, presented when the user exports the chat history to a file</comment>
+  </data>
+  <data name="GithubCopilot_HeaderText" xml:space="preserve">
+    <value>GitHub Copilot</value>
+    <comment>The header for Terminal Chat when GitHub Copilot is the connected service provider</comment>
+  </data>
+  <data name="GithubCopilot_SubheaderText" xml:space="preserve">
+    <value>Take command of your Terminal. Ask Copilot for assistance right in your terminal.</value>
+    <comment>The subheader for Terminal Chat when GitHub Copilot is the connected service provider</comment>
+  </data>
+  <data name="GithubCopilot_ResponseMetaData" xml:space="preserve">
+    <value>GitHub Copilot</value>
+    <comment>The metadata string to display whenever a response is received from the GitHub Copilot service provider</comment>
   </data>
 </root>
