--- a/src/cascadia/QueryExtension/Resources/en-US/Resources.resw
+++ b/src/cascadia/QueryExtension/Resources/en-US/Resources.resw
@@ -179,11 +179,11 @@
   </data>
   <data name="SetUpProviderDisclaimer.Text" xml:space="preserve">
     <value>You have not set up an AI provider yet! Set one up in the settings</value>
-    <comment>asfsadf</comment>
+    <comment>Disclaimer shown to the user when they open up Terminal Chat without having set up a provider yet.</comment>
   </data>
   <data name="SetUpProviderButton.Text" xml:space="preserve">
     <value>Set up AI provider</value>
-    <comment>afsdf</comment>
+    <comment>Description of the button that sends the user to the settings page where they can set up a provider.</comment>
   </data>
   <data name="GithubCopilot_HeaderText" xml:space="preserve">
     <value>GitHub Copilot</value>
